# digital-fauxice

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DERIVATION.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: cpu-fast-backend.md  cuda-backend.md  cuda-decision-record.md  cuda-validation-environment.md  dust-heal-comparison.md  hybrid-repair-agent-prompt.md  hybrid-repair-design.md  input-contract.md  metal-backend.md  reverse-engineering.md  validation.md
evidence/: cpu-fast-frame-1-parity.json  cpu-fast-frame-2-parity.json  cpu-stage-profile.json  cuda-crop-parity.json  cuda-frame-1-parity.json  cuda-frame-2-parity.json  cuda-stage-profile.json  frame-1-public-receipt.json  frame-2-public-receipt.json  metal-frame1-parity.json  metal-frame2-parity.json
hybrid/: .gitignore  pyproject.toml
hybrid/docs/: hybrid-repair.md
hybrid/examples/: make_synthetic_inputs.py
hybrid/schemas/: fauxce-hybrid-receipt-v2.schema.json
hybrid/tests/: test_cache.py  test_cli.py  test_composite.py  test_iopaint.py  test_receipts.py  test_routing.py  test_wheel_install.py
tests/: conftest.py  metal_harness.py  test_backend_contract.py  test_contract.py  test_core.py  test_cuda_level1_primitives.py  test_cuda_level2_tiles.py  test_cuda_producer_parity.py  test_diagnostics.py  test_engine.py  test_fast_cpu_bitexact.py  test_fast_cpu_differential.py  test_fast_cpu_producer_parity.py  test_isolation.py  test_metal_level1_primitives.py  test_metal_level2_tiles.py  test_metal_producer_parity.py  test_metal_softfloat.py
(+54 files in other folders)
